--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 										<h2><a href="https://docs.google.com/document/d/1kZ2_snxNVZlEbW5snS6UGaBLreTZ5S_RGNmbHYyUM7I/edit?usp=sharing">Data Exploration in SQL</h2>
 									</header>
 									<a href="https://docs.google.com/document/d/1kZ2_snxNVZlEbW5snS6UGaBLreTZ5S_RGNmbHYyUM7I/edit?usp=sharing" class="image fit"><img src="images/Google Certificate.png" alt="" /></a>
-									<p>Completed the Bellabeat fitness case study through the Google Analytics Course. I cleaned the data in excel, merged and queried the data with SQl, and created a visual through Tableu</p>
+									<p>Completed the Bellabeat fitness case study through the Google Data Analytics Course. I cleaned the data in excel, merged and queried the data with SQl, and created a visual through Tableu</p>
 									<ul class="actions special">
 										<li><a href="https://docs.google.com/document/d/1kZ2_snxNVZlEbW5snS6UGaBLreTZ5S_RGNmbHYyUM7I/edit?usp=sharing" class="button">View Project</a></li>
 									</ul>
