--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Andrew Choi<br />
 						Analyst Portfolio</h1>
-						<p>I am a recent Applied Computing graduate from the University of Washington Bothell, looking for exposure in the tech industry. Pursuing a career in data analytics to further improve my skills in SQL, Tableu, Excel, Python and R <a href="https://www.linkedin.com/in/andrew-s-choi/">@AndrewChoi</a></p>
+						<p>I am a recent Applied Computing graduate from the University of Washington Bothell, looking for exposure in the tech industry. Pursuing a career in data analytics to further improve my skills in SQL, Tableu, Excel, Python, and R <a href="https://www.linkedin.com/in/andrew-s-choi/">@AndrewChoi</a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
