--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Creating a TV Network database in SQL</a></h2>
+									<h2><a href="https://docs.google.com/presentation/d/10-Z4_DZTAF_qVUPFzt48UP9SfKIkkdp9/edit?usp=sharing&ouid=110501005847563824131&rtpof=true&sd=true">Creating a TV Network database in SQL</a></h2>
 									<p>In this project, we gathered and cleaned real time data in SQL. We made relational data models and ER diagrams to construct the database and designed queries to analyze the data  </p>
 								</header>
-								<a href="#" class="image main"><img src="images/Television.jpeg" alt="" /></a>
+								<a href="https://docs.google.com/presentation/d/10-Z4_DZTAF_qVUPFzt48UP9SfKIkkdp9/edit?usp=sharing&ouid=110501005847563824131&rtpof=true&sd=true" class="image main"><img src="images/Television.jpeg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://docs.google.com/presentation/d/10-Z4_DZTAF_qVUPFzt48UP9SfKIkkdp9/edit?usp=sharing&ouid=110501005847563824131&rtpof=true&sd=true" class="button large">View Project</a></li>
 								</ul>
