--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="https://docs.google.com/presentation/d/10-Z4_DZTAF_qVUPFzt48UP9SfKIkkdp9/edit?usp=sharing&ouid=110501005847563824131&rtpof=true&sd=true">Creating a TV Network database in SQL</a></h2>
-									<p>In this project, we gathered and cleaned real time data in SQL. We made relational data models and ER diagrams to construct the database and designed queries to analyze the data  </p>
+									<p>In this project, we gathered and cleaned real time data in SQL. We made relational data models and ER diagrams to construct the database and designed queries to analyze the data.  </p>
 								</header>
 								<a href="https://docs.google.com/presentation/d/10-Z4_DZTAF_qVUPFzt48UP9SfKIkkdp9/edit?usp=sharing&ouid=110501005847563824131&rtpof=true&sd=true" class="image main"><img src="images/Television.jpeg" alt="" /></a>
 								<ul class="actions special">
@@ -66,7 +66,7 @@
 										<h2><a href="https://docs.google.com/document/d/1kZ2_snxNVZlEbW5snS6UGaBLreTZ5S_RGNmbHYyUM7I/edit?usp=sharing">Data Exploration in SQL</h2>
 									</header>
 									<a href="https://docs.google.com/document/d/1kZ2_snxNVZlEbW5snS6UGaBLreTZ5S_RGNmbHYyUM7I/edit?usp=sharing" class="image fit"><img src="images/Google Certificate.png" alt="" /></a>
-									<p>Completed the Bellabeat fitness case study through the Google Data Analytics Course. I cleaned the data in Excel, merged and queried the data with SQl, and created a visual through Tableu</p>
+									<p>Completed the Bellabeat fitness case study through the Google Data Analytics Course. I cleaned the data in Excel, merged and queried the data with SQl, and created a visual through Tableu.</p>
 									<ul class="actions special">
 										<li><a href="https://docs.google.com/document/d/1kZ2_snxNVZlEbW5snS6UGaBLreTZ5S_RGNmbHYyUM7I/edit?usp=sharing" class="button">View Project</a></li>
 									</ul>
@@ -87,7 +87,7 @@
 										<h2><a href="https://public.tableau.com/app/profile/andrew.choi1925#!/?newProfile=&activeTab=0">Tableau Projects<br /></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/andrew.choi1925#!/?newProfile=&activeTab=0" class="image fit"><img src="images/Tableau 2.jpeg" alt="" /></a>
-									<p>Visuals I have created using datasets to present to stakeholders</p>
+									<p>Visuals I have created using datasets to present to stakeholders.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/andrew.choi1925#!/?newProfile=&activeTab=0" class="button">View Dashboard</a></li>
 									</ul>
@@ -97,7 +97,7 @@
 										<h2><a href="https://github.com/ChoiAndrew/AWS-Web-Scraping-Project">Webscraping in Java using AWS</h2>
 									</header>
 									<a href="https://github.com/ChoiAndrew/AWS-Web-Scraping-Project" class="image fit"><img src="images/AWS.png" alt="" /></a>
-									<p>Utilized Java webscraping techniques and the Jsoup library to search and store popular movie titles online. I integrated Amazons AWS SNS API to communicate with the Java console so that it can send emails to the subscribed users.</p>
+									<p>Utilized Java webscraping techniques and the Jsoup library to search and store popular movie titles online. I integrated Amazon's AWS SNS API to communicate with the Java console so that it can send emails to the subscribed users.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/ChoiAndrew/AWS-Web-Scraping-Project" class="button">View Project</a></li>
 									</ul>
